# cpp_itt

./: CMakeLists.txt  README.md  cpp_itt.h
examples/: multi_thread_example.cpp
include/: cpp_itt.h
src/: cpp_itt.cpp
